trouble di disqus

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,12 @@
 <footer>
+    <script>
+        (function() { 
+        var d = document, s = d.createElement('script');
+        s.src = 'https://khavitidala.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
     Ryan Abdurohman<br>
     &copy; 2020
 </footer>
