--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <script>
+    <!--<script>
         (function() { 
         var d = document, s = d.createElement('script');
         s.src = 'https://khavitidala.disqus.com/embed.js';
@@ -7,6 +7,15 @@
         (d.head || d.body).appendChild(s);
         })();
     </script>
-    Ryan Abdurohman<br>
-    &copy; 2020
+    <div class="circle" style="background-color: rgb(129, 6, 123);"></div>
+    <div class="circle" style="background-color: rgb(255, 252, 57);"></div>
+    <div class="circle" style="background-color: rgb(223, 35, 35);"></div>
+    <div class="circle" style="background-color: rgb(23, 93, 223);"></div>
+    <div class="circle" style="background-color: rgb(129, 6, 123);"></div>
+-->
+    <div class="circl" style="background-color: rgb(129, 6, 123); width: 15%;"></div>
+    <div class="circl" style="background-color: rgb(255, 252, 57);width: 30%;"></div>
+    <div class="circl" style="background-color: rgb(223, 35, 35);width: 25%;"></div>
+    <div class="circl" style="background-color: rgb(23, 93, 223);width: 20%;"></div>
+    <div class="circl" style="background-color: rgb(129, 6, 123);width: 10%;"></div>
 </footer>
