--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,9 @@ function tampil() {
 
     }
 }
+function panjangLayar() {
+    document.getElementsByClassName("kepala").style.height=screen.availHeight;
+}
 </script>
 <div id="cari">
     <script async src="https://cse.google.com/cse.js?cx=017547081945986719728:tyoyjbvdc34"></script>
@@ -18,7 +21,7 @@ function tampil() {
 </div>
 <div class="kepala">
 <div class="navi">
-    <a href="/index.html">Beranda</a>
+    <a href="{{ site.url | absolute_url }}">Beranda</a>
     <a href="#">Tentang</a>
     <a href="#">Kategori</a>
     <a style="cursor: pointer;" onclick="tampil()" name="nyari">Cari</a>
@@ -26,10 +29,18 @@ function tampil() {
     <div id="konten-kepala">
         <div id="judul"><a href="/index.html"><b>Rubrik Informatika</b></a></div>
         <div id="subjudul">Sebuah catatan juang seorang mahasiswa informatika</div>
-        <div class="flex-img">
+        <div class="dekor-bulet">
+            <div class="circle" style="background-color: rgb(129, 6, 123);"></div>
+            <div class="circle" style="background-color: rgb(255, 252, 57);"></div>
+            <div class="circle" style="background-color: rgb(223, 35, 35);"></div>
+            <div class="circle" style="background-color: rgb(23, 93, 223);"></div>
+            <div class="circle" style="background-color: rgb(129, 6, 123);"></div>
+        </div>
+       <!-- <div class="flex-img">
             <a href="#"><img src="/assets/img/facebook.png"></a>
             <a href="#"><img src="/assets/img/twitter.png"></a>
             <a href="#"><img src="/assets/img/linkedin.png"></a>
         </div>
+        -->
     </div>
 </div>
