--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,21 @@
+/* Media Queries */
+@media screen and (max-width: 700px) {
+    .main {
+        width: 90%;
+    }
+    .window-post {
+        flex-direction: column;
+    }
+}
+@media screen and (min-width: 701px) {
+    .main {
+        width: 60%;
+    }
+    .window-post {
+        flex-direction: row;
+    }
+}
+
 /* Default Selector */
 * {
     box-sizing: border-box;
@@ -80,7 +98,7 @@ h6 {
 /* Header */
 .kepala {
     font-family: 'Raleway', sans-serif;
-    background: url('/assets/img/bg.jpg') no-repeat center scroll;
+    background: url('/assets/img/bg.jpg') no-repeat center fixed;
     background-size: cover;
     height: 100%;
     /*max-width: 100%;
@@ -135,12 +153,11 @@ h6 {
 }
 
 /* Main Content */
-
 .control-main {
     font-family: 'Lato', sans-serif;
     background-color: black;
     color: white;
-    padding-top: 2%;
+    padding-top: 0.75%;
 }
 .control-main h1 {
     font-family: 'Raleway', sans-serif;
@@ -149,15 +166,14 @@ h6 {
 }
 .row {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: left;
+    align-items: center;
 }
 .main {
-    border-top: thin solid white;
+    justify-content: left;
+    align-items: left;
     padding-top: 2%;
-    display: block;
-    max-width: 60%;
 }
 .main a {
     text-decoration: none;
@@ -176,12 +192,14 @@ h6 {
     padding: 2vw 2vw;
     background-color: rgb(49, 161, 246);
     text-align: center;
-    font-size: 1.5vw;
+}
+.tanggal h3 {
+    font-size: 3vw;
 }
 .judulpos {
     width: 80%;
     float: left;
-    line-height: 2.7vw;
+    line-height: 3vw;
     padding-top: 0vw;
     padding-left: 1vw;
     padding-bottom: 1vw;
@@ -190,9 +208,11 @@ h6 {
     border-bottom: thin solid black;
 }
 .judulpos p {
-    font-size: 1vw;
-    line-height: 1.7vw;
+    line-height: 2vw;
     text-align: justify;
+}
+.judulpos h2 {
+    font-size: 3vw;
 }
 /* Postingan */
 #dekor-kontainer {
@@ -202,18 +222,26 @@ h6 {
     margin-bottom: 2vw;
     height: 1vw;
 }
+.dekor-kontaine {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    height: 1vw;
+    width: 100%;
+}
 #d-1 {
-    flex:25%;
+    width:25%;
     color: transparent;
     background-color: rgb(231, 37, 37);
 }
 #d-2 {
-    flex:45%;
+    width:45%;
     color: transparent;
     background-color: rgb(0, 66, 128);
 }
 #d-3 {
-    flex:30%;
+    width:30%;
     color: transparent;
     background-color: rgb(17, 146, 13);
 }
@@ -221,61 +249,131 @@ h6 {
     background-color: white;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    justify-content: center;
     font-family: 'Lato', sans-serif;
     padding: 1vw 1vw 1vw 1vw;
+    background-color: black;
+}
+.grid-col-1 {
+    flex: 2.5%;
+    width: 100%;
+}
+.grid-col-2 {
+    flex: 2.5%;
+    width: 100%;
+}
+.grid-col-3 {
+    flex: 2.5%;
+    width: 100%;
 }
 .main-post {
-    flex: 70%;
+    flex: 60%;
+    max-width: 100%;
+    padding-top: 2vw;
     padding-left: 2vw;
     padding-right: 2vw;
+    background-color: white;
 }
-.recent-post {
-    flex: 30%;
+
+#dekor-container {
+    display: flex;
+    width: 18%;
+    height: 5px;
+    flex-direction: row;
+    margin-bottom: 1vw;
+    margin-top: 1vw;
 }
-.recent-post h3 {
-    text-align: center;
+
+#warna-1 {
+    flex: 20%;
+    background-color: indigo;
+}
+#warna-2 {
+    flex: 40%;
+    background-color: gold;
+}
+#warna-3 {
+    flex: 20%;
+    background-color: maroon;
 }
 #judul-post {
-    text-align: center;
-    line-height: 3vw;
+    max-width: inherit;
+    text-align: left;
+    line-height: 3.3vw;
     display: block;
-    border-bottom: thin solid black;
 }
 #judul-post h1 {
-    font-size: 4vw;
-    line-height: 3.3vw;
+    font-size: 3.5vw;
+    line-height: 3.5vw;
 }
 #judul-post h6 {
     line-height: 1.5vw;
 }
 #isi-post {
+    max-width: inherit;
     padding-top: 2vw;
     text-align: justify;
     display: block;
 }
+#komen-pos {
+    margin-top: 1vw;
+    width: 100%;
+}
 
-/* Post 
-.konten {
-    font-size: 1.3vw;
-    line-height: 2vw;
-    padding: 1.5vw; 
+/*ormat Postingan*/
+#isi-post {
+    font-size: 1.25vw;
 }
-.konten p:first-of-type {
-    text-indent: 0px;
-}
-.konten p {
-    text-indent: 2vw;
-    text-align: justify;
-}
-.konten img {
+#isi-post img, figure {
     max-width: 100%;
 }
-.title {
-    padding-bottom: 1.5vw;
-    line-height: 2.3vw;
+#komen-pos {
+    font-size: 1.25vw;
 }
-*/
+
+/* Recent Post Side Bar*/
+
+.recent-post {
+    flex: 30%;
+    color: white;
+}
+.recent-post h1 {
+    width: 100%;
+    background-color: teal;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    text-align: center;
+}
+
+.recent-post ul {
+    list-style-type: none;
+    width: 100%;
+    margin: 0;
+    padding: 0 0 0 0;
+    text-align: justify;
+}
+.recent-post li {
+    margin-top: 0.2vw;
+    font-size: 1.5vw;
+    text-align: left;
+    width: 100%;
+    background-color: teal;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    text-align: justify;
+}
+.recent-post a {
+    text-decoration: none;
+    color: white;
+    text-align: justify;
+    
+}
+.recent-post li:hover {
+    background-color: black;
+}
+
 /* Pagination */
 .laman {
     display: flex;
@@ -313,7 +411,30 @@ footer {
     color: white;
     background-color: black;
     /*background-color:rgb(8, 37, 65);*/
-    text-align: center;
-    padding: 2vw 2vw;
     font-size: 1vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.cir-flex-contain {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.circl {
+    height: 1vw;
 } 
+.circle {
+    flex-wrap: wrap;
+    margin-left: 1vw;
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 50%;
+}
+.dekor-bulet {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
