--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,15 +15,12 @@ function panjangLayar() {
 <div id="cari">
     <script async src="https://cse.google.com/cse.js?cx=017547081945986719728:tyoyjbvdc34"></script>
     <div class="gcse-search"></div>
-    <!--<form action="" method="GET">
-    <input type="text" placeholder="Cari...">
-</form>-->
 </div>
 <div class="kepala">
 <div class="navi">
     <a href="{{ site.url | absolute_url }}">Beranda</a>
-    <a href="#">Tentang</a>
-    <a href="#">Kategori</a>
+    <a href="/tentang/">Tentang</a>
+    <a href="/kategori/">Kategori</a>
     <a style="cursor: pointer;" onclick="tampil()" name="nyari">Cari</a>
 </div>
     <div id="konten-kepala">
